--- a/core/Tests/BrightstarDB.Tests/BrightstarDB.Tests.csproj
+++ b/core/Tests/BrightstarDB.Tests/BrightstarDB.Tests.csproj
@@ -47,6 +47,7 @@
     <Compile Include="MemoryBlockSourceTests.cs" />
     <Compile Include="PageManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StorageIntegrationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\BrightstarDB\BrightstarDB.csproj">
