Further refactoring an initial unit test

--- a/core/Tests/BrightstarDB.Tests/BrightstarDB.Tests.csproj
+++ b/core/Tests/BrightstarDB.Tests/BrightstarDB.Tests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BTreeTests.cs" />
     <Compile Include="FreeListManagerTests.cs" />
     <Compile Include="MemoryBlockSourceTests.cs" />
     <Compile Include="PageManagerTests.cs" />
