--- a/core/BrightstarDB/BrightstarDB.csproj
+++ b/core/BrightstarDB/BrightstarDB.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PageStoreSession.cs" />
+    <Compile Include="Storage\PageStoreSession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\BTree\BPlusTree.cs" />
     <Compile Include="Storage\BTree\BPlusTreeConfiguration.cs" />
@@ -59,6 +59,7 @@
     <Compile Include="Storage\IPageManager.cs" />
     <Compile Include="Storage\MemoryBlockSource.cs" />
     <Compile Include="Storage\StorageException.cs" />
+    <Compile Include="Storage\WriteablePageStoreSession.cs" />
     <Compile Include="Utils\ArrayExtensions.cs" />
   </ItemGroup>
   <ItemGroup />
