Removed the need to mark pages dirty
As we know when we retrieve a page if it is for read or write and we
always copy on write, the MarkDirty method is really not required.

--- a/core/BrightstarDB/BrightstarDB.csproj
+++ b/core/BrightstarDB/BrightstarDB.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Storage\IPageManager.cs" />
     <Compile Include="Storage\MemoryBlockSource.cs" />
     <Compile Include="Storage\StorageException.cs" />
+    <Compile Include="Storage\SyncFileBlockSource.cs" />
     <Compile Include="Storage\WriteablePageStoreSession.cs" />
     <Compile Include="Utils\ArrayExtensions.cs" />
   </ItemGroup>
